# CodeCompass

./: CMakeLists.txt  Config.cmake  Functions.cmake
model/include/model/: buildaction.h  buildlog.h  buildsourcetarget.h  file.h  filecontent.h  statistics.h
plugins/: CMakeLists.txt
plugins/cpp/parser/: CMakeLists.txt
plugins/cpp_metrics/service/: CMakeLists.txt
plugins/cpp_reparse/service/: CMakeLists.txt
plugins/dummy/service/: CMakeLists.txt
plugins/git/service/: CMakeLists.txt
plugins/metrics/service/: CMakeLists.txt
plugins/search/indexer/: CMakeLists.txt
plugins/search/service/: CMakeLists.txt
service/authentication/: CMakeLists.txt
service/language/: CMakeLists.txt
service/lsp/: CMakeLists.txt
service/plugin/: CMakeLists.txt
service/project/: CMakeLists.txt
service/workspace/: CMakeLists.txt
util/include/util/: dbutil.h  odb_compatibility.h
webserver/: CMakeLists.txt
